echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app.kubernetes.io/name: echo
    app.kubernetes.io/version: 1.0.0
    environment: minikube
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: echo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: echo
        app.kubernetes.io/version: 1.0.0
        environment: minikube
    spec:
      containers:
        - name: echo
          image: kicbase/echo-server:1.0
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 60
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
            periodSeconds: 5
