echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app.kubernetes.io/name: echo
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: echo
